#364 Using parameterized tests